--- a/TenBotApp/MainWindow.xaml
+++ b/TenBotApp/MainWindow.xaml
@@ -31,7 +31,7 @@
       
        
 
-         <ListView ItemsSource="{Binding ConsoleStrings}" Background="{DynamicResource {x:Static SystemColors.ControlDarkBrushKey}}" HorizontalContentAlignment="Stretch" Margin="10,10,10,10"  >
+         <ListView x:Name="Console" ItemsSource="{Binding ConsoleStrings}" Background="{DynamicResource {x:Static SystemColors.ControlDarkBrushKey}}" HorizontalContentAlignment="Stretch" Margin="10,10,10,10"  ScrollViewer.CanContentScroll="True"  >
              <ListView.ItemTemplate>
                  <DataTemplate>
                      <TextBlock x:Name="DataItem" Text="{Binding}" />
